--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "har-validator": "^5.1.3",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-scripts": "2.1.1",
+    "semantic-ui-react": "^0.84.0",
     "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
